# yakui

./: .editorconfig  .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE-MIT  PRIOR-ART.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/bootstrap/: Cargo.toml  README.md
crates/bootstrap/src/: common.rs  custom_texture.rs  graphics.rs  lib.rs  multisampling.rs  with_sdl3.rs  with_winit.rs
crates/demo/: .gitignore  Cargo.toml  README.md  index.css  index.html
crates/demo/src/: custom_texture.rs  graphics.rs  main.rs
crates/demo/src/apps/: align.rs  bench.rs  flex.rs  images.rs  inputs.rs  mod.rs  row_column.rs  sandbox.rs  simple.rs  text.rs  window.rs
crates/demo/src/examples/: align.rs  alpha.rs  bench.rs  buttons.rs  cross_alignment.rs  custom_font.rs  custom_image.rs  draggable.rs  flex.rs  images.rs  inputs.rs  leaderboard.rs  main_alignment.rs  mod.rs  panels.rs  round_rect.rs  row_column.rs  sandbox.rs  scroll.rs  show_hide.rs  state.rs  text.rs  viewport.rs  window.rs
crates/yakui/: Cargo.toml  README.md
crates/yakui-app/: Cargo.toml  README.md
crates/yakui-app/src/: lib.rs  multisampling.rs
crates/yakui-core/: Cargo.toml  README.md
crates/yakui-core/src/: anymap.rs  component.rs  context.rs  draw.rs  event.rs  globals.rs  id.rs  lib.rs  mopmopa.rs  navigation.rs  response.rs  state.rs  types.rs  widget.rs  zip_longest.rs
crates/yakui-core/src/dom/: debug.rs  dummy.rs  dynamic_scope.rs  layout.rs  mod.rs  root.rs
crates/yakui-core/src/geometry/: color.rs  constraints.rs  dim.rs  mod.rs  rect.rs  urect.rs
crates/yakui-core/src/input/: button.rs  input_state.rs  mod.rs  mouse.rs  mouse_interest.rs  navigation.rs
crates/yakui-core/src/layout/: clipping.rs  mod.rs
crates/yakui-core/src/paint/: layers.rs  mod.rs  output.rs  paint_dom.rs  primitives.rs  rect.rs  texture.rs
crates/yakui-core/tests/: regression.rs
crates/yakui-demo/: Cargo.toml
crates/yakui-demo/src/: graphics.rs  main.rs
crates/yakui-sdl2/: Cargo.toml
crates/yakui-sdl2/src/: keys.rs  lib.rs
crates/yakui-sdl3/: Cargo.toml
crates/yakui-sdl3/src/: keys.rs  lib.rs
crates/yakui-test/: Cargo.toml
crates/yakui-test/src/: lib.rs
crates/yakui-to-image/: Cargo.toml
crates/yakui-to-image/src/: graphics.rs  lib.rs
crates/yakui-vulkan/: Cargo.toml  README.md
crates/yakui-vulkan/examples/: custom_vulkan_renderer.rs  demo.rs
crates/yakui-vulkan/shaders/: main.frag  main.frag.spv  main.vert  main.vert.spv
crates/yakui-vulkan/src/: buffer.rs  descriptors.rs  lib.rs  util.rs  vulkan_context.rs  vulkan_texture.rs
crates/yakui-wgpu/: Cargo.toml  README.md
crates/yakui-wgpu/examples/: custom_wgpu_renderer.rs
crates/yakui-wgpu/shaders/: main.wgsl  premul.wgsl  text.wgsl
crates/yakui-wgpu/src/: bindgroup_cache.rs  buffer.rs  lib.rs  pipeline_cache.rs  samplers.rs  texture.rs
crates/yakui-widgets/: Cargo.toml  README.md
crates/yakui-widgets/src/: align.rs  border.rs  border_radius.rs  button.rs  clipboard.rs  clipboard_stub.rs  colored_box.rs  colors.rs  constrained_box.rs  flex.rs  font.rs  icons.rs  ignore_debug.rs  image.rs  lib.rs  list.rs  padding.rs  shapes.rs  shorthand.rs  style.rs  text.rs  text_renderer.rs  types.rs  util.rs  window.rs
crates/yakui-widgets/src/widgets/: align.rs  button.rs  canvas.rs  checkbox.rs  circle.rs  colored_box.rs  constrained_box.rs  count_grid.rs  cutout.rs  divider.rs  draggable.rs  flex.rs  flexible.rs  image.rs  intrinsic_width.rs  layer.rs  list.rs  max_width.rs  mod.rs  ninepatch.rs  nineslice.rs  offset.rs  opaque.rs  outline.rs  pad.rs  padding.rs  panel.rs  reflow.rs  render_text.rs  render_textbox.rs  round_rect.rs  scoped.rs  scrollable.rs  slider.rs  spacer.rs  stack.rs  state.rs  text.rs  textbox.rs  unconstrained_box.rs  (+2 more)
crates/yakui-widgets/tests/: snapshot.rs
crates/yakui-widgets/tests/snapshots/: align_bottom_right.snap  align_center.snap  align_text_center.snap  button_text_alignment.snap  colored_box.snap  colored_box_basic.snap  column.snap  column_basic.snap  column_cross_stretch.snap  column_grow_middle.snap  column_intrinsic.snap  column_item_spacing.snap  column_main_align_center.snap  column_main_align_end.snap  column_min.snap  constrain_checkbox.snap  pad_basic.snap  pad_empty.snap  row.snap  row_basic.snap  row_cross_center.snap  row_cross_end.snap  row_cross_start.snap  row_cross_stretch.snap  row_grow_first.snap  row_grow_last.snap  row_grow_middle.snap  row_grow_middle_spacing.snap  row_item_spacing.snap  row_reflow.snap  row_unconstrained.snap  snapshot__align_bottom_right.snap  snapshot__align_center.snap  snapshot__colored_box.snap  snapshot__column.snap  snapshot__column_min.snap  snapshot__row.snap
crates/yakui-winit/: Cargo.toml  README.md
crates/yakui-winit/src/: keys.rs  lib.rs
crates/yakui/examples/: align.rs  alpha.rs  autofocus.rs  basic.rs  bench.rs  blur.rs  button_alignment.rs  button_constrained.rs  buttons.rs  canvas.rs  clear_textbox.rs  count_grid.rs  cross_alignment.rs  custom_font.rs  custom_image.rs  draggable.rs  dropdown.rs  dynamic_scoping.rs  flex.rs  fps_meter.rs  images.rs  inputs.rs  layout.rs  leaderboard.rs  main_alignment.rs  opaque.rs  outline.rs  panels.rs  premul_transparent.rs  radial_menu.rs  round_rect.rs  row_column.rs  sandbox.rs  scroll.rs  show_hide.rs  spacer.rs  state.rs  test_issue_104.rs  test_issue_149.rs  text.rs  (+6 more)
crates/yakui/src/: lib.rs
src/: color.rs  component.rs  context.rs  dom.rs  draw.rs  event.rs  input.rs  layout.rs  lib.rs  mopmopa.rs  registry.rs  session.rs  snapshot.rs  state.rs  widgets.rs
src/dom/: debug.rs  layout.rs  mod.rs  reconciler.rs
src/geometry/: color.rs  rect.rs
src/widgets/: mod.rs  old.rs
tests/: usage.rs
