[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.dependencies]
ash = { version = "0.38", default-features = false, features = ["std"] }
sdl3 = "0.14.0"
env_logger = "0.11.8"
glam = "0.30.0"
image = { version = "0.25.6", default-features = false }
log = "0.4.17"
pollster = "0.4.0"
wgpu = "25.0.0"

# TODO: Disable all default features once supported (https://github.com/rust-windowing/winit/issues/3174)
winit = { git = "https://github.com/rust-windowing/winit.git", rev = "969237f422e3d1d18821f4ee99e6be7bb6acd913", default-features = false, features = ["x11"] }
