[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/*"]

[workspace.dependencies]
env_logger = "0.11.10"
log = "0.4.29"
bytemuck = "1.25.0"
glam = "0.32.1"
pollster = "0.4.0"
thunderdome = "0.6.1"
smallvec = "1.15.1"
image = { version = "0.25.10", default-features = false }
anyhow = "1.0.102"
insta = "1.47.2"

wgpu = "29.0.1"
ash = { version = "0.38.0", default-features = false, features = ["std"] }
ash-window = "0.13.0"

sdl3 = "0.17.3"
winit = { version = "0.30.13", default-features = false }
raw-window-handle = "0.6.2"

profiling = "1.0.17"
tracy-client = "0.18.4"
