[package]
name = "bootstrap"
publish = false
version = "0.1.0"
edition = "2021"

[features]
profile = ["profiling/profile-with-tracy", "tracy-client"]

[dependencies]
yakui = { path = "../yakui" }
yakui-wgpu = { path = "../yakui-wgpu" }
yakui-winit = { path = "../yakui-winit" }
yakui-sdl3 = { path = "../yakui-sdl3" }

anyhow = "1.0.58"
env_logger = "0.10.0"
image = { version = "0.24.2", default-features = false, features = ["png"] }
log = "0.4.17"
pollster = "0.3.0"
profiling = "1.0.6"
tracy-client = { version = "0.15.1", optional = true }

winit = "0.30.0"
sdl3 = { version = "0.14.0", features = ["build-from-source", "raw-window-handle"] }
wgpu.workspace = true
