[package]
name = "bootstrap"
publish = false
version = "0.1.0"
edition = "2021"

[features]
profile = ["profiling/profile-with-tracy", "tracy-client"]

[dependencies]
yakui = { path = "../yakui" }
yakui-wgpu = { path = "../yakui-wgpu" }
yakui-winit = { path = "../yakui-winit" }
yakui-sdl3 = { path = "../yakui-sdl3" }

anyhow = "1.0.58"
env_logger.workspace = true
image = { workspace = true, default-features = false, features = ["png"] }
log.workspace = true
pollster.workspace = true
profiling = "1.0.6"
tracy-client = { version = "0.18.0", optional = true }

winit.workspace = true
sdl3 = { workspace = true, features = ["build-from-source", "raw-window-handle"] }
wgpu.workspace = true
