[package]
name = "demo"
version = "0.0.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
profile = ["profiling/profile-with-tracy", "tracy-client"]

[dependencies]
yakui = { path = "../yakui" }
yakui-wgpu = { path = "../yakui-wgpu" }
yakui-winit = { path = "../yakui-winit" }

anyhow = "1.0.58"
clap = { version = "3.2.8", features = ["derive"] }
env_logger = "0.9.0"
image = { version = "0.24.2", default-features = false, features = ["png"] }
log = "0.4.17"
pollster = "0.2.5"
profiling = "1.0.6"
tracy-client = { version = "0.13.0", optional = true }
wgpu = "0.13.1"
winit = "0.26.1"
