[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yakui = { path = "../yakui" }
yakui-wgpu = { path = "../yakui-wgpu" }
yakui-winit = { path = "../yakui-winit" }
yakui-app = { path = "../yakui-app" }

env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.3.0"
wgpu = { workspace = true, features = ["webgl"] }
winit = "0.30.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.2.1"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"
