[package]
name = "demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
yakui = { path = "../yakui" }
yakui-wgpu = { path = "../yakui-wgpu" }
yakui-winit = { path = "../yakui-winit" }
yakui-app = { path = "../yakui-app" }

env_logger.workspace = true
log.workspace = true
pollster.workspace = true

wgpu = { workspace = true, features = ["webgl"] }

winit.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"
