[package]
name = "yakui-app"
description = "Wrapper crate for yakui, a UI library for games"
publish = false
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LPGhatguy/yakui"
edition = "2021"

[features]

[dependencies]
yakui = { path = "../yakui" }
yakui-core = { path = "../yakui-core" }
yakui-widgets = { path = "../yakui-widgets", default-features = false }
yakui-winit = { path = "../yakui-winit" }
yakui-wgpu = { path = "../yakui-wgpu" }

profiling = { version = "1.0.6", optional = true }
winit = { version = "0.30.0" }
wgpu = "0.20.1"
