[package]
name = "yakui-app"
description = "Wrapper crate for yakui, a UI library for games"
version = "0.3.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SecondHalfGames/yakui"
edition = "2021"

[features]

[dependencies]
yakui = { path = "../yakui", version = "0.3.0" }
yakui-core = { path = "../yakui-core", version = "0.3.0" }
yakui-winit = { path = "../yakui-winit", version = "0.3.0" }
yakui-wgpu = { path = "../yakui-wgpu", version = "0.3.0" }

futures = "0.3.31"
profiling = { version = "1.0.6", optional = true }
winit.workspace = true
wgpu.workspace = true
