[package]
name = "yakui-core"
description = "Core crate for yakui, a UI library for games"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LPGhatguy/yakui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = "0.12.1"
bitflags = "1.3.2"
glam = "0.21.2"
keyboard-types = { version = "0.6.2", default-features = false }
log = "0.4.17"
palette = "0.6.0"
profiling = "1.0.6"
smallvec = "1.9.0"
thunderdome = "0.5.1"

[features]
