[package]
name = "yakui-core"
description = "Core crate for yakui, a UI library for games"
version = "0.3.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SecondHalfGames/yakui"
edition = "2021"

[features]

[dependencies]
anymap = "0.12.1"
bitflags = "2.4.2"
fast-srgb8 = "1.0.0"
keyboard-types = { version = "0.8.0", default-features = false }

log.workspace = true
glam.workspace = true
thunderdome.workspace = true
smallvec.workspace = true

profiling.workspace = true
