[package]
name = "yakui-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yakui = { path = "../.." }
yakui-wgpu = { path = "../yakui-wgpu" }
yakui-winit = { path = "../yakui-winit" }
wgpu = "0.13.1"
winit = "0.26.1"
pollster = "0.2.5"
