[package]
name = "yakui-test"
description = "Testing utilities for yakui widgets"
publish = false
version = "0.0.0"
edition = "2021"

[features]
images = ["yakui-to-image"]

[dependencies]
yakui-core = { path = "../yakui-core" }
yakui-to-image = { path = "../yakui-to-image", optional = true }

insta = "1.15.0"
