[package]
name = "yakui-to-image"
description = "Quickly render a yakui UI to an image file"
publish = false
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yakui-core = { path = "../yakui-core" }
yakui-wgpu = { path = "../yakui-wgpu" }

wgpu = "0.13.1"
image = { version = "0.24.2", default-features = false, features = ["png"] }
pollster = "0.2.5"
