[package]
name = "yakui-wgpu"
description = "wgpu renderer for yakui"
version = "0.3.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SecondHalfGames/yakui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yakui-core = { path = "../yakui-core", version = "0.3.0" }

wgpu.workspace = true
glam = { version = "0.29.0", features = ["bytemuck"] }
bytemuck = { version = "1.12.1", features = ["derive"] }
thunderdome = "0.6.0"
profiling = "1.0.6"
