[package]
name = "yakui-widgets"
description = "Built-in widgets for yakui"
version = "0.3.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LPGhatguy/yakui"
edition = "2021"

[features]
default = ["default-fonts"]

# Include built-in fonts.
default-fonts = []

[dependencies]
yakui-core = { path = "../yakui-core", version = "0.3.0" }

cosmic-text = { version = "0.12.0", default-features = false, features = [
    "std",
    "swash",
] }
sys-locale = "0.3.1"
thunderdome = "0.6.0"

[dev-dependencies]
yakui = { path = "../yakui" }
yakui-test = { path = "../yakui-test" }

insta = "1.15.0"
