[package]
name = "yakui-widgets"
description = "Built-in widgets for yakui"
version = "0.3.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SecondHalfGames/yakui"
edition = "2021"

[features]
default = ["default-fonts"]

# Include built-in fonts.
default-fonts = []

[dependencies]
yakui-core = { path = "../yakui-core", version = "0.3.0" }

cosmic-text = { version = "0.14.2", default-features = false, features = [
    "std",
    "swash",
] }
sys-locale = "0.3.1"

log.workspace = true
thunderdome.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
arboard = "3.4.1"

[dev-dependencies]
yakui = { path = "../yakui" }
yakui-test = { path = "../yakui-test" }
