[package]
name = "yakui-winit"
description = "winit bindings for yakui"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LPGhatguy/yakui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yakui-core = { path = "../yakui-core", version = "0.2.0" }

# TODO: Disable all default features once supported (https://github.com/rust-windowing/winit/issues/3174)
winit = { version = "0.30.0", default-features = false, features = ["x11"] }
