[package]
name = "yakui-winit"
description = "winit bindings for yakui"
version = "0.3.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SecondHalfGames/yakui"
edition = "2021"

[dependencies]
yakui-core = { path = "../yakui-core", version = "0.3.0" }

# TODO: Disable all default features once supported (https://github.com/rust-windowing/winit/issues/3174)
winit = { workspace = true, features = ["x11"] }
