[package]
name = "yakui"
description = "A UI library for games"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LPGhatguy/yakui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yakui-core = { path = "../yakui-core", version = "0.1.0" }
yakui-widgets = { path = "../yakui-widgets", version = "0.1.0" }
